This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/9/22: SEM_3-8-18
2/9/22: Guaranteed that image shift would be read from scope after setting it
to neutral on JEOL (In 3.8).

2/9/22: Made it possible to see Record/Focus areas on all acquire points by
turning on Show acquire in Edit Focus mode.

2/9/22: Attempted to prevent files from being marked as montage when not
montaging.

2/9/22: Stabilized drawing of acquire box on marker point when current point
changes (In 3.8).

2/9/22: Prevented division by 0 in a camera routine (In 3.8).

2/7/22: Fixed setting View shift offset with shifted View image when
continuous update is on, or turned on afterwards.

2/7/22: Added script commands to scale an image to bytes, paste two images
side by side or vertically, produce a reduced spectrum scaled to bytes, and
produce a side-by-side reduced image and scaled spectrum.

2/7/22: Scaled stored dialog sizes and positions when DPI setting is different
from when the program was last run; also made all such dialog positions and
sizes be set when loading settings after startup.

2/7/22: Added button to save Mont-map states, ones having Mont-map instead of
Record camera parameters, to the State dialog.

2/7/22: Added ability to specify beam shift changes in FrameSeriesFromVar.

2/4/22: Moved menu entry for setting email address from Tilt Series to
Settings menu.

2/4/22: Added Tilt Series menu entry to set a delay after return to the
starting point in bidirectional series.

2/4/22: Added option to Navigator Acquire at Items to retract cameras at end.

2/4/22: Added script commands to set up a script to run after Navigator
acquisition, and to load a script package at end of script.

2/4/22: Saved larger TIFF and JPEG files in a thread to keep UI alive.
