@@ -3,6 +3,15 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/15/21: Fix crash in frame alignment dialog if settings were never read.
+
+2/15/21: Fixed crash when aligning whole tilt series in IMOD and Save was not
+actually checked, and passed on errors in the camera image display routine
+properly to stop running procedures.
+
+2/15/21: Added script command to report discrepancies between stage
+calibrations derived in different ways.
+
 2/9/22: SEM_3-8-18
 2/9/22: Guaranteed that image shift would be read from scope after setting it
 to neutral on JEOL (In 3.8).
